Restructured project layout
* Moved all project files to website
* Moved static files to /static
* Updated html and css with new links

--- a/website/projects.html
+++ b/website/projects.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Untitled Document</title>
-<link rel="stylesheet" type="text/css" href="css/layout.css">
+<link rel="stylesheet" type="text/css" href="static/css/layout.css">
 </head>
 
 <body>
@@ -20,11 +20,15 @@
       <li>Projects</li>
     </ul>
   </nav>
-  <main> 
-    <!--content goes here--> 
-    <p>stuff
+  <main>
+  <article>
+    <!--content goes here-->
+    <h2>project name</h2>
+    <p>project desc
     <!--content goes here--> 
 </p>
+<img src="static/images/proj_image_1">
+</article>
   </main>
   <footer>copyright info etc.</footer>
 </div>
