--- a/website/home.html
+++ b/website/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Home</title>
-	<link rel="stylesheet" type="text/css" href="style.css" >
+	<link rel="stylesheet" type="text/css" href="static/css/style.css" >
 </head>
 
 <body>
