--- a/website/index.html
+++ b/website/index.html
@@ -2,7 +2,7 @@
 	<!-- -->
     <head>
         <Title>CompSoc</Title>
-        <link rel="stylesheet" type="text/css" href="style.css" >
+        <link rel="stylesheet" type="text/css" href="static/css/style.css" >
     </head>
     <!-- -->
     <body>
