--- a/website/template.html
+++ b/website/template.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Untitled Document</title>
-<link rel="stylesheet" type="text/css" href="css/layout.css">
+<link rel="stylesheet" type="text/css" href="static/css/layout.css">
 </head>
 
 <body>
@@ -20,15 +20,11 @@
       <li>Projects</li>
     </ul>
   </nav>
-  <main>
-  <article>
-    <!--content goes here-->
-    <h2>project name</h2>
-    <p>project desc
+  <main> 
+    <!--content goes here--> 
+    <p>stuff
     <!--content goes here--> 
 </p>
-<img src="images/proj_image_1">
-</article>
   </main>
   <footer>copyright info etc.</footer>
 </div>
